--- a/Calculator.Keypad/Keypad.xaml
+++ b/Calculator.Keypad/Keypad.xaml
@@ -5,8 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Calculator.Keypad"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="240" d:DesignWidth="240" FontSize="26" Template="{DynamicResource KeypadTemplate}">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="KeyUp">
+            <i:InvokeCommandAction Command="{Binding KeyUpCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Control.Resources>
         <ControlTemplate x:Key="KeypadTemplate" TargetType="local:Keypad">
             <materialDesign:DialogHost Identifier="RootDialog">
